--- a/src/app/components/chat-item/chat-item.component.html
+++ b/src/app/components/chat-item/chat-item.component.html
@@ -1,7 +1,7 @@
 <div class="border border-cyan-500 p-3 shadow-lg w-[250px]">
   <h3>{{ chat.name }}</h3>
 
-  <h4>Участников: {{ chat.usersAmount }}</h4>
+  <h4>Участников: {{ chat.users_count }}</h4>
 
   <a
     routerLink="/room/{{ chat.id }}"
